kubernetes.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: $SERVICE
    app.kubernetes.io/part-of: $SERVICE
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $SERVICE
  namespace: $NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - $MANAGED_DOMAIN
      secretName: $SERVICE-tls-certificate
    - hosts:
        - $VANITY_DOMAIN
      secretName: $SERVICE-vanity-tls-certificate
  rules:
    - host: $MANAGED_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $SERVICE
                port:
                  number: 80
    - host: $VANITY_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $SERVICE
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $SERVICE-redirect-tap-post
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: /projects/tap/
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
spec:
  ingressClassName: nginx   # match your main Ingress
  tls:
    - hosts:
        - $MANAGED_DOMAIN
      secretName: $SERVICE-tls-certificate
    - hosts:
        - $VANITY_DOMAIN
      secretName: $SERVICE-vanity-tls-certificate
  rules:
    - host: $MANAGED_DOMAIN
      http:
        paths:
          - path: /posts/tap-generally-available/
            pathType: Exact
            backend:
              service:
                name: $SERVICE
                port:
                  number: 80
    - host: $VANITY_DOMAIN
      http:
        paths:
          - path: /posts/tap-generally-available/
            pathType: Exact
            backend:
              service:
                name: $SERVICE
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: $SERVICE
      app.kubernetes.io/part-of: $SERVICE
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE
        app.kubernetes.io/part-of: $SERVICE
    spec:
      restartPolicy: Always
      containers:
        - name: $SERVICE
          image: $IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
